<resources>
    <string name="app_name">Gimmyo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_stars">%d \nStars</string>
    <string name="text_watchers">%d \nWatchers</string>
    <string name="text_forks">%d \nForks</string>
    <string name="error_loading_repos">Oops, something went wrong</string>
    <string name="text_empty_repos">This account doesn\'t have any public repository</string>
    <string name="error_username_not_found">Oops, Octocat doesn\'t know that username</string>
    <string name="hit_username">GitHub username</string>
    <string name="default_info_message">Enter a GitHub username above to see its repositories</string>
    <string name="text_fork">This repository is a fork</string>
    <string name="text_language">Language: %s</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="social_options">or sign in with:</string>
    <string name="sign_up_or_register">Don\'t have an account?</string>
    <string name="gimmyo_logo">Gimmyo logo</string>
    <string name="gimmyo_banner">Gimmyo banner</string>
    <string name="facebook_sign_in">Facebook sign in</string>
    <string name="googleplus_sign_in">Google plus sign in</string>
    <string name="twitter_sign_in">Twitter sign in</string>


    <!-- Strings related to sign up -->
    <string name="sign_in_text">Sign in</string>
    <string name="or_sign_in_with">or sign in with:</string>
    <string name="terms_conditions_sign_up">By signing up you agree with our terms and conditions</string>
    <string name="sign_up_button">Signup</string>
    <string name="password_hint_text">Password</string>
    <string name="email_hint_text">Email address</string>
    <string name="username_hint_text">Username</string>
    <string name="create_new_account_label">Create new account</string>

    <!-- Strings related to Bidboard Details Fragment -->
    <string name="description_format">%1$s\n\n%2$s</string>
</resources>
