<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signup_bg_color">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="85dp"
        android:layout_height="70dp"
        app:srcCompat="@drawable/gimmyo_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:textColor="@color/text_color_signup_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account_label"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/username_field"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/username_hint_text"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/darker_text_color_signup_page"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.14" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/email_hint_text"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/darker_text_color_signup_page"
        app:layout_constraintTop_toBottomOf="@+id/username_field"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.15" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hint_text"
        android:inputType="textPassword"
        android:textColorHint="@color/darker_text_color_signup_page"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/email_field"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.15" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/signup_button_bg"
        android:text="@string/sign_up_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />

    <TextView
        android:id="@+id/terms_conditions_button"
        android:textColor="@color/darker_text_color_signup_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_conditions_sign_up"
        android:textSize="10sp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/or_sign_in_with_label"
        android:textColor="@color/text_color_signup_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_in_with"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/terms_conditions_button"
        android:layout_marginLeft="80dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_text"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/text_color_signup_page"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>